# ASCII-Clock

./: .gitignore  CMakeLists.txt  README.md  clock.cpp  install.sh  uninstall.sh
src/: ChronoDaemon.h  ClockBackground.cpp  ClockBackground.h  ClockContainer.cpp  ClockContainer.h  ClockDaemon.cpp  ClockDaemon.h  FontAdaptor.cpp  FontAdaptor.h  FontLib.h  TimerDaemon.cpp  TimerDaemon.h  font.h
src/Background/: ClockBackground.cpp  ClockBackground.h  HMiddleOutBackground.cpp  HMiddleOutBackground.h  HorizontalBackground.cpp  HorizontalBackground.h  VerticalBackground.cpp  VerticalBackground.h
src/Core/: Clock.cpp  ClockContainer.cpp  ClockContainer.h
src/Daemon/: ChronoDaemon.cpp  ChronoDaemon.h  ClockDaemon.h  TimerDaemon.cpp  TimerDaemon.h
src/Font/: FontAdaptor.cpp  FontAdaptor.h  FontLib.h
src/include/: background.h  daemon.h  font.h
